assets/css/style.css
/* ... */
.radio-btn [type="radio"]:not(:checked) + label:after {
    opacity: 0;
}
.radio-btn [type="radio"]:checked + label:after {
    opacity: 1;
}

.radio-btn [type="radio"]:disabled:not(:checked) + label:before,
.radio-btn [type="radio"]:disabled:checked + label:before {
    box-shadow: none;
    border-color: #bbb;
    background-color: #ddd;
}

.radio-btn [type="radio"]:disabled:checked + label:after {
    color: #999;
}

.radio-btn [type="radio"]:disabled + label {
    color: #aaa;
}

.radio-btn [type="radio"]:checked:focus + label:before,
.radio-btn [type="radio"]:not(:checked):focus + label:before {
    border: 1px dotted var(--ThemeColor);
}

.radio-btn [type="radio"]:checked + label:hover:before,
.radio-btn [type="radio"]:not(:checked) + label:hover:before {
    border: 1px solid var(--ThemeColor);
}

/* Selectpicker */
select {
    position: absolute !important;
    bottom: 0;
    left: 50%;
    display: block !important;
    width: .5px !important;
    height: 100% !important;
    padding: 0 !important;
    opacity: 0 !important;
    border: none;
}

.bootstrap-select .btn {
    border: 1px solid var(--VeryLightGray);
    border-radius: 10px;
}

.bootstrap-select span.pull-left {
    padding-left: 10px;
}

.bootstrap-select.btn-group .dropdown-menu.inner {
    position: static;
    float: none;
    border: 0;
    padding: 0;
    margin: 0;
    border-radius: 0;
    -webkit-box-shadow: none;
    box-shadow: none;
}

.bootstrap-select.open .dropdown-menu {
    display: block;
    border: 1px solid var(--VeryLightGray); 
    border-radius: 10px;
}

.bootstrap-select.btn-group .dropdown-menu {
    padding: 5px 0;
    min-width: 100%;
    overflow: hidden;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    z-index: 9999;
}

.bootstrap-select .dropdown-menu {
    display: none;
    visibility: visible;
    opacity: 1;
    padding: 0;
}

.bootstrap-select .bs-caret {
    float: right;
    padding-right: 10px;
}

.bootstrap-select .bs-caret .caret {
    border-top: 6px dashed;
    border-top: 6px solid\9;
    border-right: 6px solid transparent;
    border-left: 6px solid transparent;   
}

.bootstrap-select .selected {
    color: var(--ThemeColor);
}

.bootstrap-select .check-mark {
    display: none;
}

/*  Tabs  */
.tab-style {
    border-bottom: none;
}

.tab-style + .tab-content {
    padding: 15px;
    border: 1px solid var(--VeryLightGray);
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
    border-top-right-radius: 10px;
}

.nav-tabs.tab-style > li.active > a,
.nav-tabs.tab-style > li > a:hover {
    border: 1px solid var(--ThemeColor);
    background-color: var(--ThemeColor);
    color: #fff;
}

.nav-tabs.tab-style > li > a {
    position: relative;
    color: var(--VeryLightGray);
    margin-right: 0;
    border: 1px solid var(--VeryLightGray);
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
}

.nav-tabs.tab-style > li + li {
    margin-left: 10px;
}

/* Accordion */
.aaccordion {
    border-radius: 10px;
    background-color: var(--DarkGray);
    color: white;
    cursor: pointer;
    padding: 18px;
    width: 100%;
    text-align: center;
    border: none;
    outline: none;
    transition: 0.4s;
    border: 2px solid var(--DarkGray);
    
    font-family: 'minecraftchmc';
    font-size: 26px;
    line-height: 36px;
    color: var(--VeryLightGray);
}

.aactive, .aaccordion:hover {
    border-color: var(--ThemeColor);
}

.apanel {
    margin: 0px 72px;
    background-color: var(--VeryDarkGray);
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.5s ease-in-out;
    text-align: left;
}

.aaversion {
    background-color: var(--VeryDarkGray);
    text-align: left;
    padding-left: 72px;
    font-size: 20px;
}

.aapre {
    background-color: var(--VeryDarkGray);
    color : var(--VeryLightGray);
    text-align: left;
    white-space: pre-wrap;
}

.accordion.panel-group {
    margin-bottom: 0;
}

.accordion.panel-group .panel + .panel {
    margin-top: 0;
}

.accordion .panel {
    border: 0;
    box-shadow: none;
    border: 1px solid var(--VeryLightGray);
    border-bottom: 0;
    border-radius: 0;
    background-color: var(--DarkGray);
}

.accordion .panel:first-child,
.accordion .panel:first-child .panel-heading a {
    border-top-right-radius:10px;
    border-top-left-radius:10px;
}

.accordion .panel:last-child {
    border-bottom-right-radius:10px;
    border-bottom-left-radius:10px;
    border-bottom: 1px solid var(--VeryLightGray);
}

.accordion .panel:last-child .panel-heading a.collapsed {
    border-bottom-right-radius:10px;
    border-bottom-left-radius:10px;
}

.accordion .collapsed {
    height: auto;
}

.accordion .panel-heading {
    background-color: transparent;
    padding: 0;
}

.accordion .panel-heading a {
    display: inline-block;
    position: relative;
    width: 100%;
    padding: 10px 40px 10px 15px;
}

.accordion .panel-heading a.collapsed {
    background-color: transparent;
    color: var(--VeryLightGray);
}

.accordion .panel-heading a.collapsed:hover,
.accordion.accordion-gray .panel-heading a.collapsed:hover,
.accordion .panel-heading a {
    background-color: var(--ThemeColor);   
    color: #fff; 
}

.accordion .panel-heading a.collapsed::after {
    content: "\f107";
}

.accordion .panel-heading a::after {
    font-family: "FontAwesome";
    content: "\f106";
    position: absolute;
    top: 50%;
    right: 15px;
    transform: translateY(-50%);
    -moz-transform: translateY(-50%);
    -o-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    -webkit-transform: translateY(-50%);
}

.panel-group .panel-heading+.panel-collapse>.list-group, 
.panel-group .panel-heading+.panel-collapse>.panel-body {
    border: none;
}

/* Pagination */
.pagination {
  margin: 0;
  vertical-align: middle;
}
/* ... */

